# bookwyrm

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: flakestry-publish.yaml
bookwyrm/: redis_store.py  settings.py
bookwyrm/management/commands/: compile_themes.py  erase_streams.py  populate_streams.py
bookwyrm/static/css/: bookwyrm.scss
bookwyrm/views/admin/: celery_status.py
celerywyrm/: settings.py
contrib/systemd/: bookwyrm.service
nix/: CHANGELOG.md  README.md  default.nix  module.nix  moduleInner.nix
