[tool.poetry]
name = "bookwyrm"
version = "0.7.4"
description = "Social reading and reviewing, decentralized with ActivityPub"
authors = ["Mouse Reeve <mousereeve@riseup.net>"]

packages = [ { include = "bookwyrm"}, { include = "celerywyrm" } ]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.4"
bleach = "6.1.0"
boto3 = "^1.34"
bw-file-resubmit = "0.6.0rc2"
celery = "5.3.6"
colorthief = "0.2.1"
Django = "4.2.11"
django-celery-beat = "2.6.0"
django-compressor = "4.4"
django-csp = "3.8"
django-imagekit = "5.0.0"
django-model-utils = "4.4.0"
django-oauth-toolkit = "2.3.0"
django-pgtrigger = "4.11.0"
django-sass-processor = "1.4"
django-storages = { version = "^1.14", extras = [ "azure" ] }
environs = "11.0.0"
flower = "2.0.1"
gunicorn = "20.0.4"
packaging = ">=21.3"
protobuf = "^3.20.0"
pytz = "^2022.7"
hiredis = "2.3.2"
libsass = "0.23.0"
Markdown = "3.6"
opentelemetry-api = "1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "1.24.0"
opentelemetry-instrumentation-celery = "0.45b0"
opentelemetry-instrumentation-django = "0.45b0"
opentelemetry-instrumentation-psycopg2= "0.45b0"
opentelemetry-sdk = "1.24.0"
Pillow = "10.3.0"
psycopg2 = "2.9.9"
pycryptodome = "3.20.0"
pyotp = "2.9.0"
python-dateutil = "2.9.0.post0"
qrcode = "7.4.2"
redis = "5.0.3"
requests = "^2.32.0"  # Upstream specifies yanked version
responses = "0.25.0"
s3-tar = "0.1.13"

[tool.poetry.dev-dependencies]
black = { version = "^22",  allow-prereleases = true}

[tool.black]
required-version = "22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

